# syros

./: .gitmodules  README.md  meson.build
include/sys/: asm.h  disk.h  serial.h  types.h
lib/: meson.build
scripts/: isogen.sh  isorun.sh
sys/: disk.c  kmain.c  memory.c  meson.build  serial.c  ufs.c
sys/ext2/: disk.h  ext2.c  ext2.h
